# image-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
benches/: pipeline.rs
src/: config.rs  lib.rs  main.rs
src/application/: diff_image.rs  get_image.rs  mod.rs  ports.rs  process_image.rs
src/domain/: error.rs  image.rs  mod.rs  ops.rs  pipeline.rs  url_dsl.rs  value_objects.rs
src/infrastructure/: codec_opencv.rs  diff_opencv.rs  fonts_ab_glyph.rs  metrics.rs  mod.rs  ops_opencv.rs  runtime.rs  store_fs.rs  telemetry.rs
src/interfaces/: mod.rs
src/interfaces/http/: app.rs  dto.rs  error.rs  extract.rs  mod.rs  routes.rs  state.rs
stitch/: DESIGN.md  code.html
tests/: api.rs  dhat_zerocopy.rs
tests/common/: mod.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.vue  api.ts  style.css  types.ts  url-dsl.ts
web/src/components/: AddOperationPopover.vue  AppHeader.vue  OperationCard.vue  OperationList.vue  OutputPanel.vue  PreviewPane.vue  SourcePicker.vue
web/src/components/controls/: AnchorGrid.vue  ColorField.vue  LabeledSlider.vue  ModeChips.vue  NumberField.vue
web/src/components/ops/: AutoOrientOp.vue  BlurOp.vue  BrightnessOp.vue  ContrastOp.vue  CropOp.vue  ResizeOp.vue  RotateOp.vue  RoundCornerOp.vue  SaturationOp.vue  SharpenOp.vue  TemperatureOp.vue  WatermarkImageOp.vue  WatermarkTextOp.vue
web/src/stores/: pipeline.ts
