[package]
name = "image-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[[bin]]
name = "image-rs"
path = "src/main.rs"

[dependencies]
# Web
axum = { version = "0.8", features = ["multipart", "macros", "http2"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "trace",
    "timeout",
    "cors",
    "limit",
    "catch-panic",
    "request-id",
    "sensitive-headers",
    "fs",
] }
hyper = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1.7"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry — installed only when OTEL_EXPORTER_OTLP_ENDPOINT is set,
# but the deps are always linked. Minimal HTTP transport (no tonic) keeps
# build time tolerable.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
tracing-opentelemetry = "0.28"

# CV
opencv = { version = "0.94", default-features = false, features = [
    "imgcodecs",
    "imgproc",
] }

# Text rendering (CJK-capable)
ab_glyph = "0.2"

# In-process cache for round-corner masks
moka = { version = "0.12", features = ["sync"] }

# EXIF orientation
kamadak-exif = "0.6"

# Cheap header sniff for decompression-bomb protection (no decode)
imagesize = "0.13"

# SHA-256 for content-addressed cache keys
sha2 = "0.10"


# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Misc
num_cpus = "1"
once_cell = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3"

[[bench]]
name = "pipeline"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
